# Music-Visualizer

./: .gitignore  CMakeLists.txt  README.md  audioInformation.c  audioInformation.h  dataprocessing.c  dataprocessing.h  visualize.c
